Correcciones en `upload`, validacion de imagenes en `GCS` y logica del `form`. Implementacion de `autocompletado` en busquedas con filtros.

--- a/templates/tasa_dolar.html
+++ b/templates/tasa_dolar.html
@@ -1,5 +1,11 @@
 {% extends 'layout.html' %}
-{% block title %}Tasa de Cambio{% endblock %}
+
+
+{% block title %}
+    StockTaking | Tasa de Cambio
+{% endblock %}
+
+
 {% block content %}
 <div class="tasa-dolar-container">
   <h1>Tasa de Cambio</h1>
