--- a/templates/nuevo_producto.html
+++ b/templates/nuevo_producto.html
@@ -67,6 +67,21 @@
                 <button type="button" class="button" onclick="agregarCaracteristica()">Añadir Característica</button>
             </div>
         </div>
+        {% for c in column_config.custom_columns %}
+            <div class="form-group">
+                <label for="custom_{{ c.name }}">{{ c.name|capitalize }}</label>
+                {% if c.type == 'number' %}
+                <input type="number" name="custom_{{ c.name }}" id="custom_{{ c.name }}" class="form-control"
+                    value="{{ producto[c.name] if producto and c.name in producto else '' }}">
+                {% elif c.type == 'date' %}
+                <input type="date" name="custom_{{ c.name }}" id="custom_{{ c.name }}" class="form-control"
+                    value="{{ producto[c.name] if producto and c.name in producto else '' }}">
+                {% else %}
+                <input type="text" name="custom_{{ c.name }}" id="custom_{{ c.name }}" class="form-control"
+                    value="{{ producto[c.name] if producto and c.name in producto else '' }}">
+                {% endif %}
+            </div>
+        {% endfor %}
         <div class="form-actions">
             <button type="submit" class="button">Guardar</button>
         </div>
