Email `auth` to register added. `Dashboard` design improved.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-title">
             <a href="{{ url_for('index') }}" class="main-title">StockTaking</a>
-            <span class="subtitle">web-app</span>
+            <span class="subtitle">app</span>
         </div>
         <div class="navbar-actions">
             <label class="switch-darkmode" title="Modo oscuro">
